<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tech.pcreate.ChestXD.form">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="10dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/xlogo"
                android:alpha="0.05" />

            <LinearLayout
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:visibility="visible"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text= "@string/patient_information"
                    android:textSize="30dp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:padding="10dp"
                    android:gravity="center"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/round_edittext">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_person"/>

                    <EditText
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/full_name"
                        android:hint="@string/full_name"
                        android:textColor="@android:color/white"
                        android:textColorHint="@android:color/white"
                        android:background="@android:color/transparent" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:gravity="center"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/round_edittext">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_person"/>

                    <EditText
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/age"
                        android:inputType="number"
                        android:hint="@string/enter_age"
                        android:textColor="@android:color/white"
                        android:textColorHint="@android:color/white"
                        android:background="@android:color/transparent"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:gravity="center"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/round_edittext">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_email"/>

                    <EditText
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/input_email"
                        android:hint="@string/input_email"
                        android:textColor="@android:color/white"
                        android:textColorHint="@android:color/white"
                        android:background="@android:color/transparent"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:gravity="center"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/round_edittext">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_call"/>

                    <EditText
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/input_contact"
                        android:inputType="number"
                        android:maxLength="10"
                        android:hint="@string/input_contact"
                        android:textColor="@android:color/white"
                        android:textColorHint="@android:color/white"
                        android:background="@android:color/transparent"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:gravity="center"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/round_edittext">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_call"/>

                    <EditText
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/input_address"
                        android:hint="@string/input_address"
                        android:textColor="@android:color/white"
                        android:textColorHint="@android:color/white"
                        android:background="@android:color/transparent"/>

                </LinearLayout>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/bt_submit"
                    android:text="Submit"
                    android:textColor="@android:color/white"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/round_button"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

    <ProgressBar
        android:visibility="gone"
        android:id="@+id/loading"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginBottom="50dp"
        android:layout_gravity="bottom|center"/>

</FrameLayout>
