<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/azur"
    android:orientation="vertical"
    tools:context="com.tech.pcreate.ChestXD.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="10dp"
            >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/xlogo"/>

            <LinearLayout
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:visibility="visible"
                android:gravity="center">

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:src="@drawable/ic_account_circle"
                    />

                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:padding="10dp"
                    android:gravity="center"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/round_edittext">


                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_person"/>

                    <EditText
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/et_username"
                        android:hint="@string/enter_username"
                        android:textColor="@android:color/white"
                        android:textColorHint="@android:color/white"
                        android:background="@android:color/transparent" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:gravity="center"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/round_edittext">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_lock"/>

                    <EditText
                        android:layout_width="200dp"
                        android:inputType="textPassword"
                        android:layout_height="wrap_content"
                        android:id="@+id/et_password"
                        android:hint="@string/enter_password"
                        android:textColor="@android:color/white"
                        android:textColorHint="@android:color/white"
                        android:background="@android:color/transparent"/>

                </LinearLayout>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/bt_submit"
                    android:text="Submit"
                    android:textColor="@android:color/white"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/round_button"/>

                <TextView
                    android:id="@+id/signup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up"
                    android:textColor="@android:color/white"
                    android:layout_marginTop="10dp"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

    <ProgressBar
        android:visibility="gone"
        android:id="@+id/loading"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginBottom="50dp"
        android:layout_gravity="bottom|center"/>
</FrameLayout>
