<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/azur"
    android:orientation="vertical"
    tools:context="com.tech.pcreate.ChestXD.MainActivity">



    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardCornerRadius="10dp"
        >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/xlogo"
            android:alpha="0.6" />

        <!-- <LinearLayout
             android:id="@+id/first"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
             android:visibility="visible">

             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:layout_margin="30dp"
                 android:text="@string/takeP"
                 android:textSize="30sp"
                 android:textStyle="bold" />


             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:layout_margin="20dp"
                 android:text="@string/or"
                 android:textSize="15sp"
                 android:textStyle="bold" />

             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:layout_margin="20dp"
                 android:text="@string/chooseP"
                 android:textSize="30sp"
                 android:textStyle="bold" />

             <android.support.design.widget.FloatingActionButton
                 android:id="@+id/btn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom|center"
                 android:layout_margin="20dp"
                 android:src="@drawable/fabby"
                 app:backgroundTint="@color/colorPrimary"
                 app:fabSize="normal"></android.support.design.widget.FloatingActionButton>


         </LinearLayout>

          <LinearLayout
             android:id="@+id/ImageLay"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
             android:visibility="invisible">

             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="0.6">

                 <ImageView
                     android:id="@+id/iv"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:adjustViewBounds="true"
                     android:background="@color/azur" />

             </RelativeLayout>

             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="0.4">

                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:orientation="vertical">

                     <Button
                         android:id="@+id/predictBtn"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
                         android:layout_margin="20dp"
                         android:background="@drawable/pred_btn"
                         android:text="@string/predict"
                         android:textSize="15sp" />

                     <TextView
                         android:id="@+id/takenPic"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
                         android:layout_margin="20dp"
                         android:background="@color/azur"
                         android:textAlignment="center"
                         android:textSize="20sp"
                         android:textStyle="bold" />
                 </LinearLayout>
             </RelativeLayout>

         </LinearLayout>-->

        <LinearLayout
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="visible"
            android:gravity="center">



            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:padding="10dp"
                android:gravity="center"
                android:layout_marginTop="30dp"
                android:background="@drawable/round_edittext">


                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_person"/>

                <EditText
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/et_username"
                    android:hint="@string/enter_username"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white"
                    android:background="@android:color/transparent" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/round_edittext">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_lock"/>
                <EditText
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/et_password"
                    android:inputType="textPassword"
                    android:hint="@string/enter_password"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white"
                    android:background="@android:color/transparent"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/round_edittext">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_lock"/>
                <EditText
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/confirm_password"
                    android:inputType="textPassword"
                    android:hint="@string/confirm_password"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white"
                    android:background="@android:color/transparent"/>

            </LinearLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/bt_submit"
                android:text="Submit"
                android:textColor="@android:color/white"
                android:layout_marginTop="30dp"
                android:background="@drawable/round_button"/>

            <TextView
                android:id="@+id/signin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:textColor="@android:color/white"
                android:layout_marginTop="10dp"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>
